--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,24 @@
 .app-wrapper {
   display: grid;
   margin: 0 auto;
+  padding-top: 45px;
   width: 1200px;
-  grid-template-rows: 30px 1fr;
+  grid-template-rows: 1fr;
   grid-template-columns: 2fr 10fr;
   grid-template-areas:
-    "h h"
     "n c";
 }
 
 .app-wrapper-content {
   grid-area: c;
-  background: grey;
+  margin-top: 10px;
+  background: white;
+  border-radius: 10px;
+  padding: 25px;
+}
+
+.pageNotFoundText {
+  font-size: 70px;
+  text-align: center;
+  color: black;
 }
