--- a/src/components/Find/Find.module.css
+++ b/src/components/Find/Find.module.css
@@ -1,8 +1,29 @@
 .avatar {
-    width: 60px;
-    height: 60px;
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+  margin: 0 auto;
 }
 
-.selectedPage {
-    font-weight: bold;
+.userItem {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  display: grid;
+  grid-template-columns: 100px 1fr;
+}
+
+.followButton {
+  margin: 5px 0px 10px 0px;
+  width: 265px;
+  height: 30px;
+  border-radius: 5px;
+  border: none;
+  background-color: #0abcb8;
+  color: white;
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.followButton:hover {
+  background-color: #078886;
 }
