--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,14 +1,31 @@
 .nav {
     grid-area: n;
-    background: #33393D;
+    background: #eeeff0;
     padding: 20px;
+    display: grid;
+    grid-template-rows: repeat(6, 30px);
 }
 
-.item a {
-    color: white;
+.item {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+.item:hover {
+    background-color: #BBBCBD;
+}
+
+.item span {
+    padding: 10px;
+    line-height: 30px;
+}
+
+.nav a {
+    color: #190404;
     text-decoration: none;
 }
 
-.item a.active {
-    color: gold;
+.nav a.active {
+    color: #0ABCB8;
 }
