--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,21 +1,83 @@
 .dialogs {
-    display: grid;
-    grid-template-columns: 2fr 10fr;
+  display: grid;
+  grid-template-columns: 2fr 10fr;
+  grid-template-rows: 1fr 80px;
 }
 
-.dialogsItem {
-    padding: 20px;
+.dialog {
+  margin-bottom: 5px;
+  padding-left: 10px;
+  height: 30px;
+  width: 140px;
+  border-radius: 5px;
+  border-bottom: 2px solid #bbbcbd;
 }
 
-.dialog a {
-    color: white;
+.dialog:hover {
+  background: #bbbcbd;
+}
+
+.active .dialog {
+    background:#bbbcbd;
+}
+
+.nameUser {
     text-decoration: none;
-}
-
-.dialog a.active {
-    color: gold;
+    color: black;
+    line-height: 30px;
 }
 
 .messages {
-    padding: 20px;
+  margin-left: 20px;
 }
+
+.message {
+    width: 450px;
+    background:  #0abcb8;
+    float: left;
+    margin: 0px 10px 10px 10px;
+    border-radius: 10px;
+    padding: 10px;
+    color: white; 
+}
+
+.messageRight {
+    width: 450px;
+    background: grey;
+    float: right;
+    margin: 0px 10px 10px 10px;
+    border-radius: 10px;
+    padding: 10px;
+    color: white; 
+}
+
+.messageText {
+    width: 450px;
+}
+
+.time {
+    float: right;
+    color: white;
+    font-size: 10px;
+}
+
+.formMessage {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    margin-left: 30px;
+}
+
+.submitButton {
+    width: 100px;
+    height: 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: #0abcb8;
+    color: white;
+    font-size: 15px;
+    text-align: center;
+  }
+  
+  .submitButton:hover {
+    background-color: #078886;
+  }
