--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,3 +1,25 @@
 .myPosts {
-    padding: 20px;
+  margin-top: 20px;
+  box-shadow: 3px 3px 3px 3px #bbbcbd;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.descriptionText {
+  font-size: 20px;
+}
+
+.submitButton {
+  width: 100px;
+  height: 20px;
+  border-radius: 5px;
+  border: none;
+  background-color: #0abcb8;
+  color: white;
+  font-size: 15px;
+  text-align: center;
+}
+
+.submitButton:hover {
+  background-color: #078886;
 }
