--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,8 +1,48 @@
 .post {
-    color: white;
-    margin-top: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 60px 1fr;
+    margin: 20px;
+    color: black;
+    border-bottom: 2px solid #bbbcbd;
+    align-items: center;
 }
-.post img {
-    height: 20px;
-    width: 20px;
+
+.profileBlock {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+}
+
+.userPhoto {
+    margin: 5px;
+    height: 40px;
+    width: 40px;
+    border-radius: 40px;
+}
+
+.userName {
+    margin-top: 10px;
+    margin-left: 5px;
+    display: inline-block;
+    font-size: 20px;
+}
+
+.postText {
+    padding: 5px;
+}
+
+.statisticBlock {
+    display: grid;
+    grid-template-columns: repeat(5, 25px);
+}
+
+.likeRepostButton {
+    height: 25px;
+    width: 25px;
+}
+
+.countText {
+    margin-left: 5px;
+    margin-right: 10px;
+    line-height: 25px;
 }
